--- a/jobhub/assets/css/inbox.css
+++ b/jobhub/assets/css/inbox.css
@@ -137,7 +137,7 @@ ul.labels-info li a i {
     padding: 0 22px;
 }
 .inbox-head {
-    background: none repeat scroll 0 0 #007bff;
+    background: none repeat scroll 0 0 #99caff;
     border-radius: 0 4px 0 0;
     color: #fff;
     min-height: 80px;
@@ -194,7 +194,7 @@ ul.inbox-pagination li {
 }
 .mail-option {
     display: inline-block;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     width: 100%;
 }
 .mail-option .chk-all, .mail-option .btn-group {
@@ -374,4 +374,8 @@ table {
 
 table td {
     overflow:hidden;
+}
+
+.line {
+    
 }
