--- a/jobhub/assets/css/style.css
+++ b/jobhub/assets/css/style.css
@@ -289,7 +289,7 @@ a {
 
 /* line 75, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_common.scss */
 a:hover {
-  color: #fff;
+  color: #007bff;
 }
 
 /* line 78, C:/Users/HP/Desktop/July-HTML/287.Job_board/Job_board_Template/assets/scss/_common.scss */
@@ -497,7 +497,7 @@ hr {
   top: 0;
   width: 101%;
   height: 101%;
-  background: #11E276;
+  background: #99caff;
   z-index: 1;
   border-radius: 5px;
   transition: transform 0.5s;
